--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <div class="profile-container">
     <div class="profile">
-      <button id="view-photo-button">View Profile Photo</button>
-      <img id="profile-photo" src="img/Shubham.jpg" style="display: none;" alt="img" width="200" height="300" >
+      <img  src="img/Shubham.jpg" alt="img" width="200" height="300" >
       <h3>Shubham Kushwaha</h3>
       <h3>From- Rewa</h3>
       <h3>Branch- Civil Engineering</h3>
